--- a/src/components/search-bar/search-bar.scss
+++ b/src/components/search-bar/search-bar.scss
@@ -32,13 +32,36 @@
 
   &__results {
     position: absolute;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    box-sizing: border-box;
 
     width: 100%;
-    height: 200px;
+    height: auto;
     max-height: 400px;
 
-    background: white;
+    margin-top: 1rem;
+    padding: 0.8rem;
 
+    background: white;
+    border: 1px solid #bdbdbd;
+    border-radius: 0.8rem;
+    box-shadow: 0 10px 20px 10px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(10px);
+
+    a {
+      display: flex;
+      justify-content: space-between;
+
+      padding: 0.8rem 1.6rem;
+
+      &:hover {
+        background-color: rgba(0, 0, 0, 0.05);
+        color: unset !important;
+        border-radius: 0.8rem;
+      }
+    }
   }
 
 }
