--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -20,6 +20,18 @@
     gap: 1.6rem;
     padding: 0;
     height: 100%;
+
+    > * {
+      flex: 1;
+
+      &:first-child {
+        display: flex;
+
+        > button {
+          margin: 0 auto;
+        }
+      }
+    }
   }
 
   &__logo {
@@ -30,6 +42,7 @@
 
   &__buttons {
     display: flex;
+    justify-content: flex-end;
     gap: 1.6rem;
 
     > a > span {
